implement user registaction and ativation + adjust swagger
